completing refresh token revocation implementation